addons/sandbox/test-deployment/nfsTest.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nfs-writer
  namespace: default
spec:
  containers:
    - name: app
      image: busybox:1.36
      command: ["sh", "-c", "echo hello > /mnt/test/hello.txt && sleep 3600"]
      volumeMounts:
        - name: nfs-vol
          mountPath: /mnt/test
  volumes:
    - name: nfs-vol
      persistentVolumeClaim:
        claimName: nfs-claim
