addons/sandbox/test-deployment/willcard.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: wildcard-cert-bootstrap
  namespace: traefik
spec:
  entryPoints: [ "websecure" ]
  routes:
    - match: Host(`nextmind.net`) || HostRegexp(`{subdomain:.+}.nextmind.net`)
      kind: Rule
      services:
        - name: traefik
          port: 9000
  tls:
    certResolver: letsencrypt
    domains:
      - main: nextmind.net
        sans:
          - "*.nextmind.net"
